Some initial work on the onebusaway-quickstart bundle, with initial executable war functionality for both bundle building and webapp execution.