@@ -1,311 +1,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>onebusaway</artifactId>
-        <groupId>org.onebusaway</groupId>
-        <version>1.0.6</version>
-    </parent>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <artifactId>onebusaway-quickstart</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>onebusaway-quickstart</name>
-    <description>Quickly build and deploy a basic OneBusAway instance</description>
+    <version>1.1.0</version>
+  </parent>
+  <groupId>org.onebusaway</groupId>
+  <artifactId>onebusaway-quickstart</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-    <properties>
-        <onebusaway.version>0.0.1-SNAPSHOT</onebusaway.version>
-        <tomcat-version>5.5.29</tomcat-version>
-        <cargo.jvmargs>-Xmx1G -XX:MaxPermSize=256m</cargo.jvmargs>
-        <hsqldb.port>9930</hsqldb.port>
+  <name>onebusaway-quickstart</name>
+  <description>Quickly build and deploy a basic OneBusAway instance</description>
 
-        <!-- This value is in milliseconds, so 5 minutes... thing run slow on the CI server -->
-        <ping_timeout>300000</ping_timeout>
+  <properties>
+    <onebusaway.version>0.2.0-SNAPSHOT</onebusaway.version>
+    <wiki.integration.version>0.1.0-SNAPSHOT</wiki.integration.version>
+    <hsqldb.port>9930</hsqldb.port>
+  </properties>
 
-        <org.onebusaway.webapp.port>8080</org.onebusaway.webapp.port>
-        <org.onebusaway.webapp.ajp_port>8009</org.onebusaway.webapp.ajp_port>
-        <org.onebusaway.webapp.rmi_port>8005</org.onebusaway.webapp.rmi_port>
+  <repositories>
+    <repository>
+      <id>nexus.onebusaway.org</id>
+      <url>http://nexus.onebusaway.org/content/groups/public/</url>
+    </repository>
+  </repositories>
 
-        <org.onebusaway.phone_webapp.agi_port>8081</org.onebusaway.phone_webapp.agi_port>
+  <scm>
+    <connection>scm:svn:http://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</connection>
+    <developerConnection>scm:svn:https://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</developerConnection>
+    <url>http://code.google.com/p/onebusaway/source/browse/#svn/onebusaway-quickstart/trunk</url>
+  </scm>
 
-        <!-- Override these from the command-line -->
-        <gtfs.path></gtfs.path>
-        <bundle.xml.path></bundle.xml.path>
-        <osm.path></osm.path>
-    </properties>
+  <modules>
+    <module>onebusaway-quickstart-bootstrap</module>
+    <module>onebusaway-quickstart-webapp</module>
+    <module>onebusaway-quickstart-assembly</module>
+  </modules>
 
-    <repositories>
-        <repository>
-            <id>releases.developer.onebusaway.org</id>
-            <url>http://developer.onebusaway.org/maven/repository/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>snapshots.developer.onebusaway.org</id>
-            <url>http://developer.onebusaway.org/maven/snapshot-repository/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>releases.developer.onebusaway.org</id>
-            <url>http://developer.onebusaway.org/maven/repository/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>snapshots.developer.onebusaway.org</id>
-            <url>http://developer.onebusaway.org/maven/snapshot-repository/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <scm>
-        <connection>scm:svn:http://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</connection>
-        <developerConnection>scm:svn:https://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</developerConnection>
-        <url>http://code.google.com/p/onebusaway/source/browse/#svn/onebusaway-quickstart/trunk</url>
-    </scm>
-
-    <dependencies>
-        <!-- Even though this is referenced by onebusaway-transit-data-federation-webapp, we include it directly since we 
-            need to build our transit data bundle and the WAR doesn't export the reference -->
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-transit-data-federation</artifactId>
-            <version>${onebusaway.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-wiki-integration-file</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-federations-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-transit-data-federation-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-api-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-phone-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-sms-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-webapp</artifactId>
-            <version>${onebusaway.version}</version>
-            <type>war</type>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.4</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <finalName>onebusaway-quickstart</finalName>
-        <plugins>
-            <!-- We create custom integration-test versions of all the webapp wars that include custom resources and data-sources 
-                for our integration-testing setup -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>assembly</goal>
-                        </goals>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>src/integration-test/assemblies/onebusaway-api-webapp.xml</descriptor>
-                                <descriptor>src/integration-test/assemblies/onebusaway-phone-webapp.xml</descriptor>
-                                <descriptor>src/integration-test/assemblies/onebusaway-sms-webapp.xml</descriptor>
-                                <descriptor>src/integration-test/assemblies/onebusaway-transit-data-federation-webapp.xml</descriptor>
-                                <descriptor>src/integration-test/assemblies/onebusaway-webapp.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Build a graph bundle using our integration-test data sources (currently, a reduced set of MTA data) -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2</version>
-                <executions>
-                    <execution>
-                        <id>graph-builder-execution</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-Xmx1500m</argument>
-                                <argument>-classpath</argument>
-                                <classpath />
-                                <argument>-Donebusaway_prefix=${basedir}</argument>
-                                <argument>-Dgtfs.path=${gtfs.path}</argument>
-                                <argument>-Dbundle.xml.path=${bundle.xml.path}</argument>
-                                <argument>-Dosm.path=${osm.path}</argument>
-                                <argument>org.onebusaway.quickstart.QuickStartGraphBuilderMain</argument>
-                                <argument>${basedir}/src/integration-test/resources/bundle.xml</argument>
-                                <argument>${project.build.directory}/transit-data-bundle</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Start up an embedded database for sharing the user database between webapps -->
-            <plugin>
-                <groupId>org.onebusaway.plugins</groupId>
-                <artifactId>maven-hsqldb-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <id>user-database</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <deleteOnEntry>true</deleteOnEntry>
-                            <dbName>${project.build.directory}/org_onebusaway_database_users</dbName>
-                            <port>${hsqldb.port}</port>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Start up all the webapps using the cargo plugin -->
-            <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.0.1-beta-3</version>
-                <configuration>
-                    <container>
-                        <containerId>tomcat5x</containerId>
-                        <systemProperties>
-                            <onebusaway_prefix>${basedir}</onebusaway_prefix>
-                            <hsqldb.port>${hsqldb.port}</hsqldb.port>
-                            <org.onebusaway.webapp.port>${org.onebusaway.webapp.port}</org.onebusaway.webapp.port>
-                        </systemProperties>
-                        <zipUrlInstaller>
-                            <url>http://developer.onebusaway.org/dist/apache-tomcat-${tomcat-version}.zip</url>
-                            <installDir>${java.io.tmpdir}/cargo-installs</installDir>
-                        </zipUrlInstaller>
-                    </container>
-                    <wait>true</wait>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-container-webapp</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <configuration>
-                            <configuration>
-                                <home>${project.build.directory}/tomcat5x/webapp</home>
-                                <properties>
-                                    <cargo.jvmargs>${cargo.jvmargs} -Dapp_name=onebusaway-webapp</cargo.jvmargs>
-                                    <cargo.servlet.port>${org.onebusaway.webapp.port}</cargo.servlet.port>
-                                    <cargo.tomcat.ajp.port>${org.onebusaway.webapp.ajp_port}</cargo.tomcat.ajp.port>
-                                    <cargo.rmi.port>${org.onebusaway.webapp.rmi_port}</cargo.rmi.port>
-                                </properties>
-                                <deployables>
-                                    <deployable>
-                                        <groupId>org.onebusaway</groupId>
-                                        <artifactId>onebusaway-nyc-webapp</artifactId>
-                                        <type>war</type>
-                                        <properties>
-                                            <context>onebusaway-transit-data-federation-webapp</context>
-                                        </properties>
-                                        <location>${project.build.directory}/onebusaway-quickstart-onebusaway-transit-data-federation-webapp.war</location>
-                                        <pingURL>http://localhost:${org.onebusaway.webapp.port}/onebusaway-transit-data-federation-webapp/</pingURL>
-                                        <pingTimeout>${ping_timeout}</pingTimeout>
-                                    </deployable>
-                                    <deployable>
-                                        <groupId>org.onebusaway</groupId>
-                                        <artifactId>onebusaway-api-webapp</artifactId>
-                                        <type>war</type>
-                                        <properties>
-                                            <context>onebusaway-api-webapp</context>
-                                        </properties>
-                                        <location>${project.build.directory}/onebusaway-quickstart-onebusaway-api-webapp.war</location>
-                                        <pingURL>http://localhost:${org.onebusaway.webapp.port}/onebusaway-api-webapp/</pingURL>
-                                        <pingTimeout>${ping_timeout}</pingTimeout>
-                                    </deployable>
-                                    <deployable>
-                                        <groupId>org.onebusaway</groupId>
-                                        <artifactId>onebusaway-sms-webapp</artifactId>
-                                        <type>war</type>
-                                        <properties>
-                                            <context>onebusaway-sms-webapp</context>
-                                        </properties>
-                                        <location>${project.build.directory}/onebusaway-quickstart-onebusaway-sms-webapp.war</location>
-                                        <pingURL>http://localhost:${org.onebusaway.webapp.port}/onebusaway-sms-webapp/</pingURL>
-                                        <pingTimeout>${ping_timeout}</pingTimeout>
-                                    </deployable>
-                                    <deployable>
-                                        <groupId>org.onebusaway</groupId>
-                                        <artifactId>onebusaway-webapp</artifactId>
-                                        <type>war</type>
-                                        <properties>
-                                            <context>onebusaway-webapp</context>
-                                        </properties>
-                                        <location>${project.build.directory}/onebusaway-quickstart-onebusaway-webapp.war</location>
-                                        <pingURL>http://localhost:${org.onebusaway.webapp.port}/onebusaway-webapp/</pingURL>
-                                        <pingTimeout>${ping_timeout}</pingTimeout>
-                                    </deployable>
-                                </deployables>
-                            </configuration>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
